Add changes to WU06

--- a/html/archive.html
+++ b/html/archive.html
@@ -7,14 +7,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--CSS-->
-    <link rel="stylesheet" href="/css/archive.css">
+    <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/style.css">
 
-
+    <!--GOOGLE FONT-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <title>News box</title>
 </head>
 
 <body>
+
+    <header class="Header">
+        <nav class="Header__nav Nav">
+            <ul class="Nav__ul">
+                <li class="Nav__ul-li"> <a href="/html/archive.html"><img src="/images/icn_inbox_dark.png"
+                            alt="archive"></a> </li>
+                <li class="Nav__ul-li"><a href="/html/index.html">Newsbox</a></li>
+                <li class="Nav__ul-li"> <a href="/html/settings.html"><img src="/images/ic_settings_24px.png" alt="">
+                    </a> </li>
+            </ul>
+        </nav>
+        <div class="Header__div Div">
+            <input type="search" placeholder="Search News">
+        </div>
+
+        <!--border-->
+    </header>
+
+    <main class="Main">
+        <section class="Main__section Section">
+            <article class="Section__article">
+
+            </article>
+        </section>
+        <section class="Main__section Section">
+            <article class="Section__article">
+
+            </article>
+        </section>
+        <section class="Main__section Section">
+            <article class="Section__article">
+
+            </article>
+        </section>
+    </main>
 
 </body>
 
