Add changes to WU06

--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+
+    <!--FONT AWESOMEs-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
     <title>News box</title>
 </head>
 
@@ -34,8 +39,6 @@
         <div class="Header__div Div">
             <input type="search" placeholder="Search News">
         </div>
-
-        <!--border-->
     </header>
 
     <main class="Main">
@@ -48,26 +51,66 @@
                     <div class="Div">
                         <h1>HEALTH</h1>
                     </div>
+                    <div class="Div__dropDown">
+                        <button class="Div__dropDown-button">
+                            <i class="fas fa-chevron-down"></i></button>
+                        </button>
+                    </div>
                 </div>
-
             </article>
         </section>
+
         <section class="Main__section Section">
             <article class="Section__article">
-                <h1>Headline</h1>
-
+                <div class="Section__article-div">
+                    <div class="Div">
+                        <img src="/images/newsSectionIcon.png" alt="health">
+                    </div>
+                    <div class="Div">
+                        <h1>HEALTH</h1>
+                    </div>
+                    <div class="Div__dropDown">
+                        <button class="Div__dropDown-button">
+                            <i class="fas fa-chevron-down"></i></button>
+                        </button>
+                    </div>
+                </div>
             </article>
         </section>
+
         <section class="Main__section Section">
             <article class="Section__article">
-                <h1>Headline</h1>
-
+                <div class="Section__article-div">
+                    <div class="Div">
+                        <img src="/images/newsSectionIcon.png" alt="health">
+                    </div>
+                    <div class="Div">
+                        <h1>HEALTH</h1>
+                    </div>
+                    <div class="Div__dropDown">
+                        <button class="Div__dropDown-button">
+                            <i class="fas fa-chevron-down"></i></button>
+                        </button>
+                    </div>
+                </div>
             </article>
         </section>
+
         <section class="Main__section Section">
             <article class="Section__article">
-                <h1>Headline</h1>
-
+                <div class="Section__article-div">
+                    <div class="Div">
+                        <img src="/images/newsSectionIcon.png" alt="health">
+                    </div>
+                    <div class="Div">
+                        <h1>HEALTH</h1>
+                    </div>
+                    <div class="Div__dropDown">
+                        <button class="Div__dropDown-button">
+                            <i class="fas fa-chevron-down"></i></button>
+                        </button>
+                    </div>
+                </div>
             </article>
         </section>
 
