--- a/html/archive.html
+++ b/html/archive.html
@@ -16,6 +16,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+
+    <!--FONT AWESOMEs-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
     <title>News box</title>
 </head>
 
@@ -26,7 +31,7 @@
             <ul class="Nav__ul">
                 <li class="Nav__ul-li"> <a href="/html/archive.html"><img src="/images/icn_inbox_dark.png"
                             alt="archive"></a> </li>
-                <li class="Nav__ul-li"><a href="/html/index.html">Newsbox</a></li>
+                <li class="Nav__ul-li"><a href="/html/index.html">Archive</a></li>
                 <li class="Nav__ul-li"> <a href="/html/settings.html"><img src="/images/ic_settings_24px.png" alt="">
                     </a> </li>
             </ul>
@@ -34,26 +39,81 @@
         <div class="Header__div Div">
             <input type="search" placeholder="Search News">
         </div>
-
-        <!--border-->
     </header>
 
     <main class="Main">
         <section class="Main__section Section">
             <article class="Section__article">
-
+                <div class="Section__article-div">
+                    <div class="Div">
+                        <img src="/images/newsSectionIcon.png" alt="health">
+                    </div>
+                    <div class="Div">
+                        <h1>HEALTH</h1>
+                    </div>
+                    <div class="Div__dropDown">
+                        <button class="Div__dropDown-button">
+                            <i class="fas fa-chevron-down"></i></button>
+                        </button>
+                    </div>
+                </div>
             </article>
         </section>
+
         <section class="Main__section Section">
             <article class="Section__article">
-
+                <div class="Section__article-div">
+                    <div class="Div">
+                        <img src="/images/newsSectionIcon.png" alt="health">
+                    </div>
+                    <div class="Div">
+                        <h1>HEALTH</h1>
+                    </div>
+                    <div class="Div__dropDown">
+                        <button class="Div__dropDown-button">
+                            <i class="fas fa-chevron-down"></i></button>
+                        </button>
+                    </div>
+                </div>
             </article>
         </section>
+
         <section class="Main__section Section">
             <article class="Section__article">
-
+                <div class="Section__article-div">
+                    <div class="Div">
+                        <img src="/images/newsSectionIcon.png" alt="health">
+                    </div>
+                    <div class="Div">
+                        <h1>HEALTH</h1>
+                    </div>
+                    <div class="Div__dropDown">
+                        <button class="Div__dropDown-button">
+                            <i class="fas fa-chevron-down"></i></button>
+                        </button>
+                    </div>
+                </div>
             </article>
         </section>
+
+        <section class="Main__section Section">
+            <article class="Section__article">
+                <div class="Section__article-div">
+                    <div class="Div">
+                        <img src="/images/newsSectionIcon.png" alt="health">
+                    </div>
+                    <div class="Div">
+                        <h1>HEALTH</h1>
+                    </div>
+                    <div class="Div__dropDown">
+                        <button class="Div__dropDown-button">
+                            <i class="fas fa-chevron-down"></i></button>
+                        </button>
+                    </div>
+                </div>
+            </article>
+        </section>
+
     </main>
 
 </body>
