Add changes to WU06

--- a/html/archive.html
+++ b/html/archive.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--AXIOS-->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <!--CSS-->
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/style.css">
@@ -42,80 +45,9 @@
     </header>
 
     <main class="Main">
-        <section class="Main__section Section">
-            <article class="Section__article">
-                <div class="Section__article-div">
-                    <div class="Div">
-                        <img src="/images/newsSectionIcon.png" alt="health">
-                    </div>
-                    <div class="Div">
-                        <h1>HEALTH</h1>
-                    </div>
-                    <div class="Div__dropDown">
-                        <button class="Div__dropDown-button">
-                            <i class="fas fa-chevron-down"></i></button>
-                        </button>
-                    </div>
-                </div>
-            </article>
-        </section>
-
-        <section class="Main__section Section">
-            <article class="Section__article">
-                <div class="Section__article-div">
-                    <div class="Div">
-                        <img src="/images/newsSectionIcon.png" alt="health">
-                    </div>
-                    <div class="Div">
-                        <h1>HEALTH</h1>
-                    </div>
-                    <div class="Div__dropDown">
-                        <button class="Div__dropDown-button">
-                            <i class="fas fa-chevron-down"></i></button>
-                        </button>
-                    </div>
-                </div>
-            </article>
-        </section>
-
-        <section class="Main__section Section">
-            <article class="Section__article">
-                <div class="Section__article-div">
-                    <div class="Div">
-                        <img src="/images/newsSectionIcon.png" alt="health">
-                    </div>
-                    <div class="Div">
-                        <h1>HEALTH</h1>
-                    </div>
-                    <div class="Div__dropDown">
-                        <button class="Div__dropDown-button">
-                            <i class="fas fa-chevron-down"></i></button>
-                        </button>
-                    </div>
-                </div>
-            </article>
-        </section>
-
-        <section class="Main__section Section">
-            <article class="Section__article">
-                <div class="Section__article-div">
-                    <div class="Div">
-                        <img src="/images/newsSectionIcon.png" alt="health">
-                    </div>
-                    <div class="Div">
-                        <h1>HEALTH</h1>
-                    </div>
-                    <div class="Div__dropDown">
-                        <button class="Div__dropDown-button">
-                            <i class="fas fa-chevron-down"></i></button>
-                        </button>
-                    </div>
-                </div>
-            </article>
-        </section>
 
     </main>
-
+    <script src="/js/archive.js"></script>
 </body>
 
 </html>
