--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--ANIMATE.CSS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+    <!--AXIOS-->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <!--CSS-->
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/style.css">
@@ -17,7 +23,7 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
 
-    <!--FONT AWESOMEs-->
+    <!--FONT AWESOME-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 
@@ -42,80 +48,9 @@
     </header>
 
     <main class="Main">
-        <section class="Main__section Section">
-            <article class="Section__article">
-                <div class="Section__article-div">
-                    <div class="Div">
-                        <img src="/images/newsSectionIcon.png" alt="health">
-                    </div>
-                    <div class="Div">
-                        <h1>HEALTH</h1>
-                    </div>
-                    <div class="Div__dropDown">
-                        <button class="Div__dropDown-button">
-                            <i class="fas fa-chevron-down"></i></button>
-                        </button>
-                    </div>
-                </div>
-            </article>
-        </section>
-
-        <section class="Main__section Section">
-            <article class="Section__article">
-                <div class="Section__article-div">
-                    <div class="Div">
-                        <img src="/images/newsSectionIcon.png" alt="health">
-                    </div>
-                    <div class="Div">
-                        <h1>HEALTH</h1>
-                    </div>
-                    <div class="Div__dropDown">
-                        <button class="Div__dropDown-button">
-                            <i class="fas fa-chevron-down"></i></button>
-                        </button>
-                    </div>
-                </div>
-            </article>
-        </section>
-
-        <section class="Main__section Section">
-            <article class="Section__article">
-                <div class="Section__article-div">
-                    <div class="Div">
-                        <img src="/images/newsSectionIcon.png" alt="health">
-                    </div>
-                    <div class="Div">
-                        <h1>HEALTH</h1>
-                    </div>
-                    <div class="Div__dropDown">
-                        <button class="Div__dropDown-button">
-                            <i class="fas fa-chevron-down"></i></button>
-                        </button>
-                    </div>
-                </div>
-            </article>
-        </section>
-
-        <section class="Main__section Section">
-            <article class="Section__article">
-                <div class="Section__article-div">
-                    <div class="Div">
-                        <img src="/images/newsSectionIcon.png" alt="health">
-                    </div>
-                    <div class="Div">
-                        <h1>HEALTH</h1>
-                    </div>
-                    <div class="Div__dropDown">
-                        <button class="Div__dropDown-button">
-                            <i class="fas fa-chevron-down"></i></button>
-                        </button>
-                    </div>
-                </div>
-            </article>
-        </section>
 
     </main>
-
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
