Add changes to WU06

--- a/html/archive.html
+++ b/html/archive.html
@@ -37,9 +37,10 @@
             <ul class="Nav__ul">
                 <li class="Nav__ul-li"> <a href="/html/archive.html"><img src="/images/icn_inbox_dark.png"
                             alt="archive"></a> </li>
-                <li class="Nav__ul-li"><a href="/html/index.html">Archive</a></li>
+                <li class="Nav__ul-li"><a href="/html/index.html">Newsbox</a></li>
                 <li class="Nav__ul-li"> <a href="/html/settings.html"><img src="/images/ic_settings_24px.png" alt="">
                     </a> </li>
+                <li class="Nav__ul-li" id="toggle">🌞</li>
             </ul>
         </nav>
         <div class="Header__div Div">
@@ -50,6 +51,7 @@
     <main class="Main">
 
     </main>
+    <script src="/js/lightNdarkMode.js"></script>
     <script src="/js/archive.js"></script>
 </body>
 
