--- a/html/index.html
+++ b/html/index.html
@@ -40,8 +40,10 @@
                 <li class="Nav__ul-li"><a href="/html/index.html">Newsbox</a></li>
                 <li class="Nav__ul-li"> <a href="/html/settings.html"><img src="/images/ic_settings_24px.png" alt="">
                     </a> </li>
+                <li class="Nav__ul-li" id="toggle">🌞</li>
             </ul>
         </nav>
+
         <div class="Header__div Div">
             <input type="search" placeholder="Search News">
         </div>
@@ -50,6 +52,7 @@
     <main class="Main">
 
     </main>
+    <script src="/js/lightNdarkMode.js"></script>
     <script src="/js/index.js"></script>
 </body>
 
