--- a/html/settings.html
+++ b/html/settings.html
@@ -29,6 +29,7 @@
                 <li class="Nav__ul-li"><a href="/html/index.html">Newsbox</a></li>
                 <li class="Nav__ul-li"> <a href="/html/settings.html"><img src="/images/ic_settings_24px.png" alt="">
                     </a> </li>
+                <li class="Nav__ul-li" id="toggle">🌞</li>
             </ul>
         </nav>
         <!--border-->
