Add changes to WU06

--- a/html/archive.html
+++ b/html/archive.html
@@ -44,7 +44,7 @@
             </ul>
         </nav>
         <div class="Header__div Div">
-            <input type="search" placeholder="Search News">
+            <input type="search" class="Div__input" placeholder="Search News">
         </div>
     </header>
 
