--- a/html/index.html
+++ b/html/index.html
@@ -43,9 +43,8 @@
                 <li class="Nav__ul-li" id="toggle">🌞</li>
             </ul>
         </nav>
-
         <div class="Header__div Div">
-            <input type="search" placeholder="Search News">
+            <input type="search" class="Div__input" placeholder="Search News">
         </div>
     </header>
 
