--- a/html/archive.html
+++ b/html/archive.html
@@ -14,6 +14,7 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="/css/archive.css">
+    <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/style.css">
 
     <!--GOOGLE FONT-->
@@ -52,7 +53,7 @@
 
     </main>
     <script src="/js/lightNdarkMode.js"></script>
-    <script src="/js/archive.js"></script>
+    <script src="/js/health.js"></script>
 </body>
 
 </html>
