Add changes to WU06

--- a/html/index.html
+++ b/html/index.html
@@ -53,6 +53,7 @@
     </main>
     <script src="/js/lightNdarkMode.js"></script>
     <script src="/js/index.js"></script>
+    <script src="/js/dropDown.js"></script>
 </body>
 
 </html>
