Add changes to WU06

--- a/html/settings.html
+++ b/html/settings.html
@@ -6,7 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--ANIMATE.CSS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+    <!--AXIOS-->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <!--CSS-->
+    <link rel="stylesheet" href="/css/settings.css">
+    <link rel="stylesheet" href="/css/archive.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/style.css">
 
@@ -16,6 +24,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+
+    <!--FONT AWESOME-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
     <title>News box</title>
 </head>
 
@@ -36,23 +49,20 @@
     </header>
 
     <main class="Main">
-        <section class="Main__section Section">
-            <article class="Section__article">
+        <section class="Section">
+            <div class="Section__settings-div-headline">
+                <h1 class="FirstHeadline__Large">Manage</h1>
+                <h2 class="SecondHeadline__medium">Categories</h2>
+            </div>
+            <div class="Section__settings-div-sort">
 
-            </article>
-        </section>
-        <section class="Main__section Section">
-            <article class="Section__article">
 
-            </article>
-        </section>
-        <section class="Main__section Section">
-            <article class="Section__article">
-
-            </article>
+            </div>
         </section>
     </main>
 
+    <script src="/js/setting.js"></script>
+    <script src="/js/lightNdarkMode.js"></script>
 </body>
 
 </html>
