--- a/html/settings.html
+++ b/html/settings.html
@@ -13,8 +13,6 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <!--CSS-->
-    <link rel="stylesheet" href="/css/settings.css">
-    <link rel="stylesheet" href="/css/archive.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/style.css">
 
@@ -61,7 +59,7 @@
             </div>
         </section>
     </main>
-
+    <script src="/js/localStorage.js"></script>
     <script src="/js/setting.js"></script>
     <script src="/js/lightNdarkMode.js"></script>
 </body>
