--- a/html/settings.html
+++ b/html/settings.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <!--CSS-->
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/settings.css">
     <link rel="stylesheet" href="/css/style.css">
 
     <!--GOOGLE FONT-->
