Add changes to WU06

--- a/html/archive.html
+++ b/html/archive.html
@@ -36,10 +36,9 @@
     <header class="Header">
         <nav class="Header__nav Nav">
             <ul class="Nav__ul">
-                <li class="Nav__ul-li"> <a href="/html/archive.html"><img src="/images/icn_inbox_dark.png"
-                            alt="archive"></a> </li>
+                <li class="Nav__ul-li"> <a href="/html/archive.html"><i class="fas fa-bookmark"></i></a> </li>
                 <li class="Nav__ul-li"><a href="/html/index.html">Newsbox</a></li>
-                <li class="Nav__ul-li"> <a href="/html/settings.html"><img src="/images/ic_settings_24px.png" alt="">
+                <li class="Nav__ul-li"> <a href="/html/settings.html"><i class="fas fa-cog"></i>
                     </a> </li>
                 <li class="Nav__ul-li" id="toggle">🌞</li>
             </ul>
@@ -53,7 +52,7 @@
 
     </main>
     <script src="/js/lightNdarkMode.js"></script>
-    <script src="/js/health.js"></script>
+
 </body>
 
 </html>
