--- a/html/index.html
+++ b/html/index.html
@@ -35,10 +35,9 @@
     <header class="Header">
         <nav class="Header__nav Nav">
             <ul class="Nav__ul">
-                <li class="Nav__ul-li"> <a href="/html/archive.html"><img src="/images/icn_inbox_dark.png"
-                            alt="archive"></a> </li>
+                <li class="Nav__ul-li"> <a href="/html/archive.html"><i class="fas fa-bookmark"></i></a> </li>
                 <li class="Nav__ul-li"><a href="/html/index.html">Newsbox</a></li>
-                <li class="Nav__ul-li"> <a href="/html/settings.html"><img src="/images/ic_settings_24px.png" alt="">
+                <li class="Nav__ul-li"> <a href="/html/settings.html"><i class="fas fa-cog"></i>
                     </a> </li>
                 <li class="Nav__ul-li" id="toggle">🌞</li>
             </ul>
@@ -51,9 +50,10 @@
     <main class="Main">
 
     </main>
-    <script src="/js/dropDown.js"></script>
+
     <script src="/js/lightNdarkMode.js"></script>
     <script src="/js/index.js"></script>
+    <script src="/js/localStorage.js"></script>
 
 </body>
 
